# mem0-ai-api

./: .env.example  .gitignore  CLAUDE.md  DEPENDENCY_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  README_COMPLETE.md  README_MEM0_HYBRID_VECTOR_GRAPH_CONFIGURATION.md  README_QDRANT_API.md  debug_connection.py  env.example  main.py  pyproject.toml  pytest.ini  railway-simple.json  requirements.in  requirements.txt  test_gradio_app.py
.cursor/rules/: pydanticv2-rules.mdc
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-reports/: index.html
app/: main.py
docs/: AUTHENTICATION_FIXES.md  INTERACTIVE_CLI_DEMO.md  QDRANT_CLI_COMMANDS.md  README.md  README_GRAPH_MEMORY_VS_VECTOR_STORES.md  README_TEAM_DEMO.md  ai-agent-api.md  swagger-ui-guide.md  swagger-ui-summary.md
gradio-ai-tutor/: README.md  app.py  run.sh
gradio-peptides-app/: CHAT_FORMAT_FIX.md  CONVERSION_SUMMARY.md  PROFILE_UPDATE_SUMMARY.md  README.md  app.py  run.sh  test_gradio_peptides.py
scripts/: check_qdrant_direct.sh  demo_wrapper.py  interactive_mem0_qdrant_cli.py  open_swagger_ui.py  run_peptide_coaching_demo.py  test_ai_agent_api.py  test_cli_functionality.py
streamlit/: AUTHENTICATION_UPDATE.md  IMPLEMENTATION_SUMMARY.md  README.md  run_app.sh  test_auth.py
streamlit-peptides-app/: app.py  config.yaml  generate_passwords.py  test_app.py
tests/: test_ai_agent_api.py
(+373 files in other folders)
